--- a/index.html
+++ b/index.html
@@ -18,8 +18,24 @@
 </nav>
 
     <div class="container">
-        <h1>Welcome to My Personal Website</h1>
-        <p>Hello! I'm Lucas, a student and researcher passionate about atmospheric science, computer science, and the natural world.</p>
+        <h1>Welcome to My Personal Page!</h1>
+        <p>Hello - I'm Lucas! I'm currently an atmospheric science PhD student at the University of California Davis.
+        I'm originally from Houston, TX and graduated from Clear Falls High School (go Knights!) in 2022.
+        After highschool, I attended Long Island University - Post (go Sharks!) where I played NCAA D1 tennis
+        and pursued a dual-degree in mathematics and computer science. I had originally planned to pursue a career in electrical
+        engineering (following in my father's footsteps), but after spending a summer volunteering for the Student Conservation Assocation
+        in the backcountry wilderness of Washington state, I knew I wanted to be an Earth scientist. From there, I interned for two summers
+        in the Cloud Processes Group at Brookhaven National Laboratory, fell in love with cloud physics, and the rest is history!
+        Now, my research is focused on using high-resolution numerical models to develop advanced cloud microphysics parameterizations 
+        and improve our theoretical understanding of cloud microphysics processes. <br>
+            
+        Outside of academics and research, I a most likely playing tennis (albeit far less competetively), spending time in the outdoors, 
+        strumming my guitar, seeing films in the theater, or embracing my German heritage (meist mit Bier).<br>
+        
+        It is my goal to enter academia and become a professor, so I am always looking for new opportunities to improve my
+        teaching and presentation skills and mentor students. I'm happy to collaborate with current undergraduate students
+        and help you realize that you also want to be a cloud physicist!
+        </p>
         <img src="images/profile.jpg" alt="Profile Picture" class="profile">
         <p>This website showcases my current projects, code, and contact information. Thanks for visiting!</p>
     </div>
