--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         and pursued a dual-degree in mathematics and computer science. I had originally planned to pursue a career in electrical
         engineering (following in my father's footsteps), but after spending a summer volunteering for the Student Conservation Assocation
         in the backcountry wilderness of Washington state, I knew I wanted to be an Earth scientist. From there, I interned for two summers
-        in the Cloud Processes Group at Brookhaven National Laboratory, fell in love with cloud physics, and the rest is history!
+        in the Cloud Processes Group at Brookhaven National Laboratory, fell in love with cloud physics, and the rest is history! <br>
+            
         Now, my research is focused on using high-resolution numerical models to develop advanced cloud microphysics parameterizations 
         and improve our theoretical understanding of cloud microphysics processes. <br>
             
