--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         teaching and presentation skills and mentor students. I'm happy to collaborate with current undergraduate students
         and help you realize that you also want to be a cloud physicist!
         </p>
-        <img src="images/profile.jpg" alt="Profile Picture" class="profile">
+        <img src="images/profile.jpeg" alt="Profile Picture" class="profile">
         <p>This website showcases my current projects, code, and contact information. Thanks for visiting!</p>
     </div>
 </body>
