--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
 
     <div class="container">
         <h1>Contact Me</h1>
-        <p>Email: lucas@example.com</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com" target="_blank">linkedin.com/in/lucas</a></p>
+        <p>lhornung@ucdavis.edu</p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/lucashornung/" target="_blank">linkedin.com/in/lucas</a></p>
     </div>
 </body>
 </html>
