--- a/projects.html
+++ b/projects.html
@@ -19,11 +19,11 @@
 
     <div class="container">
         <h1>My Current Projects</h1>
-        <p>Here are some things I'm working on:</p>
+        <p>Page under development... Come back soon!</p>
         <ul>
-            <li>Cloud microphysics modeling at Brookhaven National Lab</li>
-            <li>Science storytelling internship with National Geographic</li>
-            <li>Independent research on climate feedback loops</li>
+            <li></li>
+            <li></li>
+            <li></li>
         </ul>
     </div>
 </body>
