--- a/code.html
+++ b/code.html
@@ -20,8 +20,7 @@
 
     <div class="container">
         <h1>Code & GitHub</h1>
-        <p>I enjoy writing code for scientific computing, data analysis, and backend systems.</p>
-        <p>Check out my work on <a href="https://github.com" target="_blank">GitHub</a>.</p>
+        <p>Page under development... come back soon!</p>
     </div>
 </body>
 </html>
