--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 </nav>
 
     <div class="container">
-        <h1>Welcome to My Personal Page!</h1>
+        <h1>Lucas's Personal Page!</h1>
+        <img src="images/profile.jpeg" alt="Profile Picture" class="profile">
+
         <p>Hello - I'm Lucas! I'm currently an atmospheric science PhD student at the University of California Davis.
         I'm originally from Houston, TX and graduated from Clear Falls High School (go Knights!) in 2022.
         After highschool, I attended Long Island University - Post (go Sharks!) where I played NCAA D1 tennis
@@ -38,8 +40,7 @@
         teaching and presentation skills and mentor students. I'm happy to collaborate with current undergraduate students
         and help you realize that you also want to be a cloud physicist!
         </p>
-        <img src="images/profile.jpeg" alt="Profile Picture" class="profile">
-        <p>This website showcases my current projects, code, and contact information. Thanks for visiting!</p>
+        <p>Thanks for visiting!</p>
     </div>
 </body>
 </html>
