Update index.html yuh

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </nav>
 
     <div class="container">
-        <h1>Lucas's Personal Page!</h1>
+        <h1>Lucas's Research Page!</h1>
 
         <p>Hello - I'm Lucas! I'm currently an atmospheric science PhD student at the University of California Davis.
         I'm originally from Houston, TX and graduated from Clear Falls High School (go Knights!) in 2022.
