--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,7 @@
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
+        <li><a href="AboutMe.html">About Me</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="code.html">Code</a></li>
         <li><a href="contact.html">Contact</a></li>
