--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </ul>
 </nav>
 
-    <div class="container">
+    <div class="home-content">
         <h1>Lucas's Research Page!</h1>
 
         <p>Hello - I'm Lucas! I'm currently an atmospheric science PhD student at the University of California Davis.
