--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
         <h1>Lucas's Research Page!</h1>
 
-        <p class = "intro">Hello - I'm Lucas! I'm currently an atmospheric science PhD student at the University of California Davis.
+        <p class = "intro">Welcome - I'm Lucas! I'm currently an atmospheric science PhD student at the University of California Davis.
         I'm originally from Houston, TX and graduated from Clear Falls High School (go Knights!) in 2022.
         After highschool, I attended Long Island University - Post (go Sharks!) where I played NCAA D1 tennis
         and pursued a dual-degree in mathematics and computer science. I had originally planned to pursue a career in electrical
