--- a/AboutMe.html
+++ b/AboutMe.html
@@ -18,5 +18,18 @@
     </ul>
 </nav>
 
+<div class="container">
+    <p class = "intro">Welcome - I'm Lucas! I'm currently an atmospheric science PhD student at the University of California Davis.
+        I'm originally from Houston, TX and graduated from Clear Falls High School (go Knights!) in 2022.
+        After highschool, I attended Long Island University - Post (go Sharks!) where I played NCAA D1 tennis
+        and pursued a dual-degree in mathematics and computer science. I had originally planned to pursue a career in electrical
+        engineering (following in my father's footsteps), but after spending a summer volunteering for the Student Conservation Assocation
+        in the backcountry wilderness of Washington state, I knew I wanted to be an Earth scientist. From there, I interned for two summers
+        in the Cloud Processes Group at Brookhaven National Laboratory, fell in love with cloud physics, and the rest is history!
+    </p>
+
+
+</div>
+
 </body>
 </html>
