--- a/projects.html
+++ b/projects.html
@@ -11,22 +11,42 @@
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="AboutMe.html">About Me</a></li>
-        <li><a href="projects.html">Projects</a></li>
+        <li><a href="AboutMe.html">My Story</a></li>
+        <li><a href="projects.html" class="active">Projects</a></li>
         <li><a href="code.html">Code</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="cv.pdf" download>Download CV</a></li>
+        <li><a href="cv.pdf" target="_blank">Download CV</a></li>
     </ul>
 </nav>
 
     <div class="container">
-        <h1>My Current Projects</h1>
-        <p>Page under development... Come back soon!</p>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
+        <h1>My Projects</h1>
+        <div class="home-content">
+            <div class="home-text">
+                <h2>Collision Coalescnece in an Entrainment Mixing Environment</h2>
+                <p>Two important processes that occur in clouds are <b>entrainment-mixing</b>,
+                    the mixing of external dry and moist cloud air at the edges of a cloud and
+                    <b>collision-coalescence</b>, the process of droplets colliding with each other
+                    and merging together into a single, larger droplet. While high-resolution
+                    models have been used to explore both of these processes seperately, their
+                    interaction with each other remains to be explored. Working alongside researchers
+                    in Brookhaven National Laboratory's 
+                    <a href="https://www.bnl.gov/envsci/cloud/"target="_blank" rel="noopener noreferrer">Cloud Processes Group</a>,
+                    we are seeking to use Particle-Resolved Direct Numerical Simulation
+                    to understand this complex interaction and how it impacts the evolution of key microphysical
+                    properties.
+                </p>
+    
+            </div>
+    
+            <figure>
+                <img src="images/DSD_evol_all_Cases.jpg" alt="Cloud Droplet Size Distribution Evoltuion">
+                <figcaption>Evolution of the the cloud droplet size distribution for cases of the same environmental and turbu￾lence conditions but with (EDR 100 Dry) and without (EDR 100 Dry CCOFF) collision-coalescence (top),
+                    the same environmental conditions but different turbulence conditions (middle), and the same turbulence
+                    conditions but different environmental conditions (bottom).
+                </figcaption>
+            </figure>
+        </div>
     </div>
 </body>
 </html>
