--- a/code.html
+++ b/code.html
@@ -11,11 +11,11 @@
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="AboutMe.html">About Me</a></li>
+        <li><a href="AboutMe.html">My Story</a></li>
         <li><a href="projects.html">Projects</a></li>
-        <li><a href="code.html">Code</a></li>
+        <li><a href="code.html" class="active">Code</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="cv.pdf" download>Download CV</a></li>
+        <li><a href="cv.pdf" target="_blank">Download CV</a></li>
     </ul>
 </nav>
 
