--- a/contact.html
+++ b/contact.html
@@ -11,18 +11,18 @@
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="AboutMe.html">About Me</a></li>
+        <li><a href="AboutMe.html">My Story</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="code.html">Code</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="cv.pdf" download>Download CV</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
+        <li><a href="cv.pdf" target="_blank">Download CV</a></li>
     </ul>
 </nav>
 
     <div class="container">
         <h1>Contact Me</h1>
-        <p>lhornung@ucdavis.edu</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/lucashornung/" target="_blank">linkedin.com/in/lucas</a></p>
+        <p font-size="500%">Email - <a href="mailto:lhornung@ucdavis.edu">Lhornung@ucdavis.edu</a><br>
+        LinkedIn: <a href="https://www.linkedin.com/in/lucashornung/" target="_blank">linkedin.com/in/lucas</a></p>
     </div>
 </body>
 </html>
